[tool.poetry]
name = "fine3300"
version = "0.1.0"
description = ""
authors = ["Alex Khoo Shien How <alvinkhooedu99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
matplotlib = "^3.10.0"
plotly = "^5.24.1"
transformers = "^4.48.2"
torch = "^2.6.0"
python-dotenv = "^1.0.1"
groq = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
